# rot

./: README.md
rot-data-lens-light/: Makefile  README.md  rot-data-lens-light.cabal
rot-data-lens-light/src/Rot/Data/Lens/: Light.hs
rot-data-lens-light/src/Rot/Data/Lens/Light/: Core.hs  ExampleRecords.hs  State.hs
rot-data-lens-light/src/Rot/Data/Lens/Light/Core/: Lambda.hs
rot-data-lens-light/src/Rot/Data/Lens/Light2/: Core.hs  State.hs
rot-data-lens-light/test/Test/Lens/: CoreSpec.hs
rot-transformers/: Makefile  README.md  rot-transformers.cabal
rot-transformers/src/Rot/Control/Monad/Trans/: Cont.hs  Except.hs  Identity.hs  List.hs  Maybe.hs  RWS.hs  Reader.hs  State.hs  Writer.hs
rot-transformers/src/Rot/Control/Monad/Trans/RWS/: Lazy.hs  Strict.hs
rot-transformers/src/Rot/Control/Monad/Trans/State/: Lazy.hs  Strict.hs
rot-transformers/src/Rot/Control/Monad/Trans/Writer/: Lazy.hs  Strict.hs
rot-transformers/test/Test/: ReaderSpec.hs
rot-transformers/test/Test/State/: LazySpec.hs
