name:                rot-data-lens-light
version:             0.1.0.0
synopsis:            data-lens-light library without types & newtypes
description:         a futile but fun exercise
homepage:            https://github.com/adarqui/rot-data-lens-light
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Experimental
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Rot.Data.Lens.Light
                       Rot.Data.Lens.Light.Core
                       Rot.Data.Lens.Light2.Core
                       Rot.Data.Lens.Light2.State
                       Rot.Data.Lens.Light.Core.Lambda
                       Rot.Data.Lens.Light.State
                       Rot.Data.Lens.Light.ExampleRecords
  build-depends:       base >=4.6 && <4.9, rot-transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  RankNTypes, KindSignatures
  ghc-options:         -Wall -Werror

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  other-modules:    Test.Lens.CoreSpec
  build-depends:    base
                  , hspec >= 1.3
                  , hspec-core >= 2.1.7
                  , QuickCheck
                  , rot-data-lens-light == 0.1.0.0
